[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/level_4.gd" type="Script" id=2]
[ext_resource path="res://Level parts/spawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=4]
[ext_resource path="res://soundmaker/soundmaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/turret.tscn" type="PackedScene" id=6]
[ext_resource path="res://Level parts/air_spawn.tscn" type="PackedScene" id=8]

[sub_resource type="TileSet" id=1]
0/name = "industrial.v2.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "industrial.v2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 176, 112, 96, 96 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 1 ), 176, Vector2( 0, 2 ), 50, Vector2( 1, 1 ), 58, Vector2( 1, 2 ), 184, Vector2( 2, 0 ), 152, Vector2( 2, 1 ), 26, Vector2( 3, 0 ), 186, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 154, Vector2( 3, 3 ), 178, Vector2( 3, 4 ), 146, Vector2( 3, 5 ), 18, Vector2( 4, 2 ), 146, Vector2( 4, 4 ), 146 ]
1/autotile/icon_coordinate = Vector2( 1, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "industrial.v2.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 64, 64, 48 )
2/tile_mode = 1
2/autotile/bitmask_mode = 1
2/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 178, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 184, Vector2( 1, 2 ), 58, Vector2( 2, 0 ), 56, Vector2( 2, 1 ), 154, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 146 ]
2/autotile/icon_coordinate = Vector2( 3, 1 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "industrial.v2.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 32, 64, 48 )
3/tile_mode = 1
3/autotile/bitmask_mode = 1
3/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 56, Vector2( 2, 0 ), 58, Vector2( 2, 1 ), 184, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 511 ]
3/autotile/icon_coordinate = Vector2( 1, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "industrial.v2.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 80, 208, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "industrial.v2.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 0, 64, 16 )
5/tile_mode = 1
5/autotile/bitmask_mode = 1
5/autotile/bitmask_flags = [ Vector2( 0, 0 ), 48, Vector2( 1, 0 ), 56, Vector2( 2, 0 ), 24, Vector2( 3, 0 ), 325 ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "industrial.v2.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 352, 32, 32, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "industrial.v2.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 80, 208, 16, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[node name="level_4" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131083, 3, 1, 131087, 2, 65539, 131110, 1, 1, 196619, 3, 65536, 196623, 2, 65539, 196646, 1, 131076, 262155, 3, 65536, 262159, 2, 65539, 262182, 1, 131076, 327691, 3, 65536, 327695, 2, 65539, 327718, 1, 262147, 393227, 3, 65536, 393231, 2, 131072, 393232, 2, 3, 393254, 1, 262147, 458763, 3, 65536, 458768, 2, 65539, 458790, 1, 262147, 524298, 3, 0, 524299, 3, 131074, 524304, 2, 65539, 524326, 1, 131072, 524327, 1, 1, 524328, 1, 1, 524329, 1, 1, 524330, 1, 1, 524331, 1, 1, 524332, 1, 1, 524333, 1, 1, 524334, 1, 1, 524335, 1, 1, 524336, 1, 1, 524337, 1, 1, 524338, 1, 1, 524339, 1, 1, 589834, 3, 65536, 589840, 2, 65539, 655370, 3, 65536, 655376, 2, 65539, 720906, 3, 65536, 720912, 2, 65539, 786442, 3, 65536, 786448, 2, 65539, 851978, 3, 65536, 851984, 2, 65539, 917514, 3, 65536, 917520, 2, 65539, 983050, 3, 65536, 983057, 2, 65539, 1048586, 3, 65536, 1048593, 2, 65539, 1114122, 3, 65536, 1114129, 2, 65539, 1179658, 3, 65536, 1179665, 2, 65539, 1179692, 3, 1, 1179693, 3, 1, 1245194, 3, 65536, 1245201, 2, 65539, 1310730, 3, 131072, 1310731, 3, 3, 1310737, 2, 65539, 1376267, 3, 65536, 1376273, 2, 65539, 1441803, 3, 65536, 1441809, 2, 65539, 1507339, 3, 65536, 1507346, 2, 65539, 1572875, 3, 65536, 1572882, 2, 65539, 1638411, 3, 65536, 1638418, 2, 65539, 1703946, 3, 0, 1703947, 3, 131074, 1703954, 2, 65539, 1769482, 3, 65536, 1769490, 2, 65539, 1835018, 3, 65536, 1835026, 2, 65539, 1900554, 3, 65537, 1900555, 3, 1, 1900556, 3, 3, 1900562, 2, 65539, 1966090, 3, 65536, 1966092, 3, 131072, 1966093, 3, 131073, 1966094, 3, 3, 1966098, 2, 131072, 1966099, 2, 3, 2031626, 3, 65536, 2031630, 3, 131072, 2031631, 3, 3, 2031635, 2, 65539, 2097162, 3, 65536, 2097167, 3, 131072, 2097168, 3, 3, 2097171, 2, 65539, 2162698, 3, 65536, 2162704, 3, 131072, 2162705, 3, 131073, 2162706, 3, 3, 2162707, 2, 65539, 2228234, 3, 1, 2228242, 3, 1, 2228243, 2, 65539, 2228244, 3, 1, 2293779, 2, 65539, 2293780, 3, 1 )

[node name="TileMap3" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131096, 3, 1, 131114, 3, 1, 196632, 3, 65536, 196650, 3, 65536, 262168, 3, 65536, 262186, 3, 65536, 327704, 3, 65536, 327722, 3, 65536, 393240, 3, 65537, 393241, 3, 131073, 393242, 3, 131073, 393243, 3, 1, 393244, 3, 131073, 393245, 3, 1, 393246, 3, 1, 393247, 3, 131073, 393248, 3, 1, 393249, 3, 1, 393250, 3, 131073, 393251, 3, 131073, 393252, 3, 1, 393253, 3, 1, 393254, 3, 1, 393255, 3, 131073, 393256, 3, 131073, 393257, 3, 1, 393258, 3, 131074, 458776, 3, 65536, 524312, 3, 65536, 589848, 3, 65536, 655384, 3, 65536, 720920, 3, 65536, 786456, 3, 65536, 851992, 3, 65536, 917528, 3, 65536, 1048575, 2, 65539, 983040, 2, 1, 983041, 2, 2, 983042, 2, 2, 983043, 2, 2, 983044, 2, 1, 983045, 2, 1, 983046, 2, 2, 983047, 2, 2, 983048, 2, 2, 983049, 2, 1, 983050, 2, 2, 983051, 2, 2, 983052, 2, 2, 983053, 2, 1, 983054, 2, 2, 983055, 2, 1, 983056, 2, 1, 983057, 2, 2, 983058, 2, 2, 983059, 2, 2, 983060, 2, 1, 983061, 2, 1, 983062, 2, 1, 983063, 2, 65539, 983064, 3, 65536, 983065, 2, 65539, 983066, 2, 1, 983067, 2, 1, 983068, 2, 2, 983069, 2, 1, 983070, 2, 3, 1048600, 3, 65536, 1048606, 2, 131072, 1048607, 2, 1, 1048608, 2, 2, 1048609, 2, 2, 1048610, 2, 1, 1048611, 2, 2, 1048612, 2, 2, 1048613, 2, 2, 1048614, 2, 2, 1048615, 2, 2, 1048616, 2, 1, 1048617, 2, 1, 1048618, 2, 1, 1048619, 2, 2, 1048620, 2, 65537, 1048621, 2, 1, 1048622, 2, 2, 1048623, 2, 2, 1048624, 2, 2, 1048625, 2, 1, 1048626, 2, 1, 1048627, 2, 2, 1048628, 2, 65539, 1114136, 3, 65537, 1114137, 3, 1, 1114138, 3, 3, 1114156, 2, 65539, 1179672, 3, 65536, 1179674, 3, 131072, 1179675, 3, 131073, 1179676, 3, 131073, 1179677, 3, 1, 1179678, 3, 131073, 1179679, 3, 131073, 1179680, 3, 131073, 1179681, 3, 1, 1179682, 3, 1, 1179683, 3, 1, 1179684, 3, 1, 1179685, 3, 1, 1179686, 3, 1, 1179687, 3, 131073, 1179688, 3, 131073, 1179689, 3, 131073, 1179690, 3, 131073, 1179691, 3, 1, 1179692, 2, 65539, 1179693, 3, 1, 1179694, 3, 131073, 1179695, 3, 1, 1179696, 3, 131073, 1179697, 3, 131073, 1179698, 3, 1, 1245208, 3, 65536, 1245228, 2, 65539, 1310720, 3, 1, 1310721, 3, 1, 1310722, 3, 1, 1310723, 3, 131073, 1310724, 3, 131073, 1310725, 3, 131073, 1310726, 3, 1, 1310727, 3, 131073, 1310728, 3, 131073, 1310729, 3, 131073, 1310730, 3, 131073, 1310731, 3, 131073, 1310732, 3, 131073, 1310733, 3, 1, 1310734, 3, 131073, 1310735, 3, 1, 1310736, 3, 1, 1310737, 3, 1, 1310738, 3, 1, 1310739, 3, 131073, 1310740, 3, 131073, 1310741, 3, 131073, 1310742, 3, 1, 1310743, 3, 131073, 1310744, 3, 65539, 1310764, 2, 65539, 1376280, 3, 65536, 1376300, 2, 65539, 1441816, 3, 65536, 1441836, 2, 65539, 1507352, 3, 65537, 1507353, 3, 1, 1507372, 2, 65539, 1572888, 3, 65536, 1572908, 2, 65539, 1638424, 3, 65536, 1638444, 2, 65539, 1703960, 3, 65536, 1703980, 2, 65539, 1769496, 3, 65536, 1769516, 2, 65539, 1835032, 3, 65536, 1835052, 2, 65539, 1900568, 3, 65536, 1900588, 2, 65539, 1966104, 3, 65536, 1966124, 2, 65539, 2031640, 3, 65536, 2031660, 2, 65539, 2097176, 3, 65536, 2097196, 2, 65539, 2162712, 3, 65536, 2162732, 2, 65539, 2228248, 3, 65536, 2228268, 2, 65539, 2293784, 3, 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 655386, 5, 0, 655387, 5, 0, 655388, 5, 0, 655389, 5, 0, 655390, 5, 0, 655391, 5, 0, 655392, 5, 0, 655393, 5, 0, 655394, 5, 0, 655395, 5, 0, 655396, 5, 0, 655397, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 5, 0, 720928, 5, 0, 720929, 5, 0, 720930, 5, 0, 720931, 5, 0, 720932, 5, 0, 720933, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 786457, 5, 0, 786458, 5, 0, 786459, 5, 0, 786460, 5, 0, 786461, 5, 0, 786462, 5, 0, 786463, 5, 0, 786464, 5, 0, 786465, 5, 0, 786466, 5, 0, 786467, 5, 0, 786468, 5, 0, 786469, 5, 0, 851976, 6, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 851983, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 851993, 5, 0, 851994, 5, 0, 851995, 5, 0, 851996, 5, 0, 851997, 5, 0, 851998, 5, 0, 851999, 5, 0, 852000, 5, 0, 852001, 5, 0, 852002, 5, 0, 852003, 5, 0, 852004, 5, 0, 852005, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 917529, 5, 0, 917530, 5, 0, 917531, 5, 0, 917532, 5, 0, 917533, 5, 0, 917534, 5, 0, 917535, 5, 0, 917536, 5, 0, 917537, 5, 0, 917538, 5, 0, 917539, 5, 0, 917540, 5, 0, 917541, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 983065, 5, 0, 983066, 5, 0, 983067, 5, 0, 983068, 5, 0, 983069, 5, 0, 983070, 5, 0, 983071, 5, 0, 983072, 5, 0, 983073, 5, 0, 983074, 5, 0, 983075, 5, 0, 983076, 5, 0, 983077, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048606, 5, 0, 1048607, 5, 0, 1048608, 5, 0, 1048609, 5, 0, 1048610, 5, 0, 1048611, 5, 0, 1048612, 5, 0, 1048613, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114142, 5, 0, 1114143, 5, 0, 1114144, 5, 0, 1114145, 5, 0, 1114146, 5, 0, 1114147, 5, 0, 1114148, 5, 0, 1114149, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 5, 0, 1179678, 5, 0, 1179679, 5, 0, 1179680, 5, 0, 1179681, 5, 0, 1179682, 5, 0, 1179683, 5, 0, 1179684, 5, 0, 1179685, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245208, 6, 0, 1245214, 5, 0, 1245215, 5, 0, 1245216, 5, 0, 1245217, 5, 0, 1245218, 5, 0, 1245219, 5, 0, 1245220, 5, 0, 1245221, 5, 0, 1310732, 5, 0, 1310733, 5, 0, 1310734, 5, 0, 1310735, 5, 0, 1310736, 5, 0, 1310737, 5, 0, 1310738, 5, 0, 1310739, 5, 0, 1310750, 5, 0, 1310751, 5, 0, 1310752, 5, 0, 1310753, 5, 0, 1310754, 5, 0, 1310755, 5, 0, 1310756, 5, 0, 1310757, 5, 0, 1376268, 5, 0, 1376269, 5, 0, 1376270, 5, 0, 1376271, 5, 0, 1376272, 5, 0, 1376273, 5, 0, 1376274, 5, 0, 1376275, 5, 0, 1376286, 5, 0, 1376287, 5, 0, 1376288, 5, 0, 1376289, 5, 0, 1376290, 5, 0, 1376291, 5, 0, 1376292, 5, 0, 1376293, 5, 0, 1441804, 5, 0, 1441805, 5, 0, 1441806, 5, 0, 1441807, 5, 0, 1441808, 5, 0, 1441809, 5, 0, 1441810, 5, 0, 1441811, 5, 0, 1441822, 5, 0, 1441823, 5, 0, 1441824, 5, 0, 1441825, 5, 0, 1441826, 5, 0, 1441827, 5, 0, 1441828, 5, 0, 1441829, 5, 0, 1507340, 5, 0, 1507341, 5, 0, 1507342, 5, 0, 1507343, 5, 0, 1507344, 5, 0, 1507345, 5, 0, 1507346, 5, 0, 1507347, 5, 0, 1507348, 5, 0, 1507349, 5, 0, 1507350, 5, 0, 1507351, 5, 0, 1507352, 5, 0, 1507353, 5, 0, 1507354, 5, 0, 1507355, 5, 0, 1507356, 5, 0, 1507357, 5, 0, 1507358, 5, 0, 1507359, 5, 0, 1507360, 5, 0, 1507361, 5, 0, 1507362, 5, 0, 1507363, 5, 0, 1507364, 5, 0, 1507365, 5, 0, 1572876, 5, 0, 1572877, 5, 0, 1572878, 5, 0, 1572879, 5, 0, 1572880, 5, 0, 1572881, 5, 0, 1572882, 5, 0, 1572883, 5, 0, 1572884, 5, 0, 1572885, 5, 0, 1572886, 5, 0, 1572887, 5, 0, 1572888, 5, 0, 1572889, 5, 0, 1572890, 5, 0, 1572891, 5, 0, 1572892, 5, 0, 1572893, 5, 0, 1572894, 5, 0, 1572895, 5, 0, 1572896, 5, 0, 1572897, 5, 0, 1572898, 5, 0, 1572899, 5, 0, 1572900, 5, 0, 1572901, 5, 0, 1638412, 5, 0, 1638413, 5, 0, 1638414, 5, 0, 1638415, 5, 0, 1638416, 5, 0, 1638417, 5, 0, 1638418, 5, 0, 1638419, 5, 0, 1638420, 5, 0, 1638421, 5, 0, 1638422, 5, 0, 1638423, 5, 0, 1638424, 5, 0, 1638425, 5, 0, 1638426, 5, 0, 1638427, 5, 0, 1638428, 5, 0, 1638429, 5, 0, 1638430, 5, 0, 1638431, 5, 0, 1638432, 5, 0, 1638433, 5, 0, 1638434, 5, 0, 1638435, 5, 0, 1638436, 5, 0, 1638437, 5, 0, 1638440, 6, 0, 1703948, 5, 0, 1703949, 5, 0, 1703950, 5, 0, 1703951, 5, 0, 1703952, 5, 0, 1703953, 5, 0, 1703954, 5, 0, 1703955, 5, 0, 1703956, 5, 0, 1703957, 5, 0, 1703958, 5, 0, 1703959, 5, 0, 1703960, 5, 0, 1703961, 5, 0, 1703962, 5, 0, 1703963, 5, 0, 1703964, 5, 0, 1703965, 5, 0, 1703966, 5, 0, 1703967, 5, 0, 1703968, 5, 0, 1703969, 5, 0, 1703970, 5, 0, 1703971, 5, 0, 1703972, 5, 0, 1703973, 5, 0, 1769484, 5, 0, 1769485, 5, 0, 1769486, 5, 0, 1769487, 5, 0, 1769488, 5, 0, 1769489, 5, 0, 1769490, 5, 0, 1769491, 5, 0, 1769492, 5, 0, 1769493, 5, 0, 1769494, 5, 0, 1769495, 5, 0, 1769496, 5, 0, 1769497, 5, 0, 1769498, 5, 0, 1769499, 5, 0, 1769500, 5, 0, 1769501, 5, 0, 1769502, 5, 0, 1769503, 5, 0, 1769504, 5, 0, 1769505, 5, 0, 1769506, 5, 0, 1769507, 5, 0, 1769508, 5, 0, 1769509, 5, 0, 1835020, 5, 0, 1835021, 5, 0, 1835022, 5, 0, 1835023, 5, 0, 1835024, 5, 0, 1835025, 5, 0, 1835026, 5, 0, 1835027, 5, 0, 1835028, 5, 0, 1835029, 5, 0, 1835030, 5, 0, 1835031, 5, 0, 1835032, 5, 0, 1835033, 5, 0, 1835034, 5, 0, 1835035, 5, 0, 1835036, 5, 0, 1835037, 5, 0, 1835038, 5, 0, 1835039, 5, 0, 1835040, 5, 0, 1835041, 5, 0, 1835042, 5, 0, 1835043, 5, 0, 1835044, 5, 0, 1835045, 5, 0 )

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="air_spawn_1" parent="cam" instance=ExtResource( 8 )]
position = Vector2( 16, -284 )

[node name="air_spawn_2" parent="cam" instance=ExtResource( 8 )]
position = Vector2( 405, -8 )

[node name="air_spawn_3" parent="cam" instance=ExtResource( 8 )]
position = Vector2( -416, -16 )

[node name="air_spawn_4" parent="cam" instance=ExtResource( 8 )]
position = Vector2( 0, 288 )

[node name="soundmaker" parent="cam" instance=ExtResource( 5 )]
position = Vector2( 28, 24 )

[node name="spawn_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 176, 144 )

[node name="spawn_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 480, 360 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 112 )

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 480, 136 )
collision_layer = 8
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -80, -60 )
polygon = PoolVector2Array( -288, 332, -288, 24.4148, -336, -80, -400, -80, -404, 416, 248, 416, 248, -80, -336, -80, -287.852, 23.9944, 128, 24, 128, 332 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -72, 80 )
polygon = PoolVector2Array( -168, -16, -8, -16, -8, 88, -168, 88 )

[node name="Spawn" type="Timer" parent="."]
autostart = true

[node name="turret" parent="." instance=ExtResource( 6 )]
position = Vector2( 320, 248 )

[node name="waiting" type="Timer" parent="."]
wait_time = 4.0

[node name="turret3" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 152 )

[node name="turret4" parent="." instance=ExtResource( 6 )]
position = Vector2( 576, 344 )
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
[connection signal="timeout" from="waiting" to="." method="_on_waiting_timeout"]
